Editing About section and fixing Z-index for return button

--- a/src/styles/ProjectData.css
+++ b/src/styles/ProjectData.css
@@ -72,7 +72,7 @@
     margin-bottom: 0px;
     position: sticky;
     top: 0; /* Adjust the top position as needed */
-    z-index: 2; /* Adjust the z-index as needed */
+    z-index: 99999; /* Adjust the z-index as needed */
     width: 50vw;
     height: 88vh;
     margin-left:35px; 
@@ -168,6 +168,7 @@
   font-size: 15px;
   margin-bottom:0; 
   padding-left:0; 
+  z-index: 99999;
   outline:none; 
   padding-bottom:5px; 
   font-family: 'Times Now Light';
